--- a/core/modules/cloudflare/zone_settings_override.json
+++ b/core/modules/cloudflare/zone_settings_override.json
@@ -6,11 +6,15 @@
   "arguments": [
     {
       "key": "name",
-      "description": "- (Required) The DNS zone to which apply settings."
+      "description": "- (Required) The DNS zone to which apply settings.",
+      "type": "nullOr string",
+      "default": null
     },
     {
       "key": "settings",
-      "description": "- (Optional) Settings overrides that will be applied to the zone. If a setting is not specified the existing setting will be used. For a full list of available settings see below."
+      "description": "- (Optional) Settings overrides that will be applied to the zone. If a setting is not specified the existing setting will be used. For a full list of available settings see below.",
+      "type": "nullOr string",
+      "default": null
     }
   ]
 }
