--- a/core/modules/cloudflare/resource_zone_settings_override.json
+++ b/core/modules/cloudflare/resource_zone_settings_override.json
@@ -8,13 +8,13 @@
       "key": "name",
       "description": "- (Required) The DNS zone to which apply settings.",
       "type": "nullOr string",
-      "default": null
+      "default": "null"
     },
     {
       "key": "settings",
       "description": "- (Optional) Settings overrides that will be applied to the zone. If a setting is not specified the existing setting will be used. For a full list of available settings see below.",
       "type": "nullOr string",
-      "default": null
+      "default": "null"
     }
   ]
 }
