--- a/core/provider-modules/cloudflare/resource_zone_settings_override.json
+++ b/core/provider-modules/cloudflare/resource_zone_settings_override.json
@@ -7,13 +7,12 @@
     {
       "key": "name",
       "description": "- (Required) The DNS zone to which apply settings.",
-      "type": "nullOr string",
-      "default": "null"
+      "type": "string"
     },
     {
       "key": "settings",
       "description": "- (Optional) Settings overrides that will be applied to the zone. If a setting is not specified the existing setting will be used. For a full list of available settings see below.",
-      "type": "nullOr string",
+      "type": "nullOr attrs",
       "default": "null"
     }
   ]
