--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,5 +8,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: cachix/install-nix-action@v16
+      with:
+        nix_path: nixpkgs=channel:nixos-22.05
     - name: tests
       run: nix run ".#test"
