--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,9 @@ jobs:
     - uses: cachix/install-nix-action@v23
       with:
         nix_path: nixpkgs=channel:nixos-24.05
-    - name: tests
+    - name: Tests
       run: nix run ".#test"
     - name: Flake checks
       run: nix flake check
+    - name: Generate docs
+      run: nix run ".#docs"
