--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -22,12 +22,12 @@ jobs:
           # Get the base branch (e.g. main)
           BASE_BRANCH="${{ github.event.pull_request.base.ref }}"
 
-          # Check if Changelog.md was modified in this PR
+          # Check if Changelog.md was modified
           CHANGELOG_MODIFIED=$(git diff --name-only origin/$BASE_BRANCH...HEAD | \
             grep -c "^Changelog.md$" || true)
 
           if [ "$CHANGELOG_MODIFIED" -gt 0 ]; then
-            echo "✅ Changelog.md was modified in this PR"
+            echo "✅ Changelog.md was modified"
             exit 0
           fi
 
@@ -36,7 +36,7 @@ jobs:
             --grep="${{ env.BYPASS_MESSAGE }}" --oneline | wc -l)
 
           if [ "$BYPASS_FOUND" -gt 0 ]; then
-            echo "✅ Changelog.md isn't necessary to modify in this PR"
+            echo "✅ ${{ env.BYPASS_MESSAGE }}"
             exit 0
           fi
 
